secondfile/objects/DHStatus_V4_LAN_IP_Address_Data__c.object
<CustomObject>
    <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-V4 LAN IP Address Data</description>
    <fields>
        <fullName>Address_Mask__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-V4 LAN IP Address Data-Address Mask</description>
        <label>Address Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-V4 LAN IP Address Data-Address Type</description>
        <label>Address Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_Connection_Level_Data_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-V4 LAN IP Address Data-DHStatus-Connection Level Data</description>
        <label>DHStatus-Connection Level Data</label>
        <referenceTo>DHStatus_Connection_Level_Data__c</referenceTo>
        <relationshipLabel>DHStatus-V4 LAN IP Address Data</relationshipLabel>
        <relationshipName>DHStatus_V4_LAN_IP_Address_Data_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DHStatus_PL_Group_Port_Data_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DHStatus-PL Group Port Data</label>
        <referenceTo>DHStatus_PL_Group_Port_Data__c</referenceTo>
        <relationshipLabel>DHStatus-V4 LAN IP Address Data</relationshipLabel>
        <relationshipName>DHStatus_V4_LAN_IP_Address_Data_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <description>RDS-Premise Details - DHStatus-Update Deal Hash Details - DHStatus-Logical Provisioning-DHStatus-Access Circuit Data-DHStatus-Connection Level-DHStatus-V4 LAN IP Address Data-IP Address</description>
        <label>IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-V4 LAN IP Address Data</label>
    <nameField>
        <displayFormat>V4IP-{0000}</displayFormat>
        <label>DHStatus-V4 LAN IP Address Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-V4 LAN IP Address Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>